--- a/Arbitrage-Lab/bib_references_DOI.bib
+++ b/Arbitrage-Lab/bib_references_DOI.bib
@@ -527,10 +527,9 @@
 
 @manual{hudsonthames2024,
   title        = {The Definitive Guide to Pairs Trading},
-  author       = {Hudson \& Thames},
-  year         = {2024},
+  author       = {Joubert, Jacques and Proskurin, Olexandr and Barziy, Illya and Pervushyna, Valeriia and Pei, Hansen and Wang, Yefeng},
+  year         = {2021},
   url          = {https://github.com/hudson-and-thames/definitive_guide_to_pairs_trading/blob/main/Definitive_Guide_to_Pairs_Trading.pdf},
-  note         = {Version 1.0}
 }
 
 @article{Roychoudhury2023,
