--- a/Arbitrage-Lab/txt_1-2_Literature_Review_writeup.tex
+++ b/Arbitrage-Lab/txt_1-2_Literature_Review_writeup.tex
@@ -1,40 +1,32 @@
-%==============[	  Sonnet 3.5  ]==============
-
+%==============[	  Classics  ]==============
 Pairs trading has emerged as a cornerstone of statistical arbitrage strategies, with a rich history in both academic research and practical applications. The foundational work of \cite{Gatev2006} provided the first comprehensive academic study of pairs trading, documenting significant excess returns of up to 11\% annually for self-financing portfolios over a 40-year period from 1962 to 2002. This seminal paper was complemented by the theoretical framework developed in \cite{Elliott2005}, which introduced a mean-reverting Gaussian Markov chain model for spread dynamics and established analytical methods for parameter estimation using the EM algorithm.
 
-The cointegration approach to pairs trading has been extensively studied, beginning with the foundational work of \cite{vidyamurthy2004pairs}, which provided a comprehensive framework for implementing cointegration-based strategies. Subsequent research has explored various aspects of this approach: \cite{Caldeira2013} demonstrated the effectiveness of cointegration-based selection methods in the Brazilian market, while \cite{Huck2014} provided evidence that cointegration-based strategies outperform distance-based methods. \cite{Cartea2015} extended the framework by incorporating optimal dynamic investment strategies, and \cite{Lintilhac2016} applied these techniques to cryptocurrency markets.
+%==============[	  Empirical investigations  ]==============
+Empirical investigations have thoroughly examined the profitability of pairs trading across different markets and time periods. For instance, \cite{Chen2019} reported large abnormal returns driven by short-term reversals and pairs momentum effects, while \cite{Do2010} showed that simple pairs trading remains viable in turbulent periods despite a general profitability decline in later years. In a UK-centric study, \cite{Bowen2014} recorded moderate annual returns once risk and liquidity were accounted for. Large-scale assessments in \cite{Krauss2016} and \cite{Rad2016} confirmed that distance, cointegration, and copula-based strategies can yield significant alpha but exhibit important differences regarding convergence speed and trading frequencies.
 
-Empirical investigations have thoroughly examined the profitability of pairs trading across different markets and time periods. \cite{Chen2019} decomposed trading signals into short-term reversal and pairs momentum components, while \cite{Do2010} documented a declining trend in profitability but noted strong performance during market turbulence. \cite{Bowen2014} provided comprehensive UK evidence, and \cite{Krauss2016} conducted an extensive review of different methodological approaches. \cite{Rad2016} compared distance, cointegration, and copula-based methods, finding varying degrees of success across different market conditions.
+%==============[	  Cointegration  ]==============
+A popular way to identify and exploit persistent relationships in pairs trading has involved cointegration analysis. \cite{vidyamurthy2004pairs} stands out as a seminal reference, detailing how cointegration can be applied to detect mean-reverting spreads in equity markets. 
+Subsequent research has explored various aspects of this approach: \cite{Caldeira2013} demonstrated the effectiveness of cointegration-based selection methods in the Brazilian market, while \cite{Huck2014} provided evidence that cointegration-based strategies outperform distance-based methods. \cite{Cartea2015} extended the framework by incorporating optimal dynamic investment strategies, and \cite{Lintilhac2016} applied these techniques to cryptocurrency markets.
 
-For readers seeking a deeper understanding of pairs trading methodologies, several didactic sources are available. \cite{hudsonthames2024} provides a comprehensive practical guide covering various approaches from basic implementation to advanced techniques. \cite{alexander2008market} offers valuable introductions to both cointegration analysis and copula applications in financial markets, particularly in chapters II.5 and II.6.
+%==============[	  Copulas  ]==============
+A growing strand of research leverages copulas to model more general dependencies beyond linear correlation.
+\cite{Min2010} introduced Bayesian inference for multivariate copulas using pair-copula constructions, while \cite{stander2013trading} offer a copula-based approach for detecting relative mispricing. 
+Extensions in \cite{Liew2013} and \cite{Xie2016} underscore that copulas outperform distance-of-prices rules in capturing tail dependencies 
+Multi-dimensional variants have been proposed (e.g., \cite{lau2016multi}) to incorporate three or more assets into a single framework. Further refinements, like those introduced in \cite{Krauss2017} and \cite{zhi2017dynamic}, combine t-copulas or dynamic copula-GARCH models with individualized thresholds for improved risk-adjusted returns. In the high-frequency domain, \cite{Chu2018} showed that copula-based mispricing indices can be coupled with deep learning for profitability enhancements. Recent efforts also explore mixed copulas (\cite{SabinodaSilva2023}), ARMA-GARCH approaches (\cite{Wang2023}), and copulas specialized for cointegrated assets (\cite{He2024}), culminating in improved alpha extraction. Finally, \cite{Tadi2025} proposes reference-asset-based copula trading specifically for cryptocurrencies. 
+%
 
-The application of copulas to pairs trading represents a significant methodological advancement. \cite{Min2010} introduced Bayesian inference for multivariate copulas using pair-copula constructions, while \cite{stander2013trading} and \cite{Liew2013} demonstrated the advantages of copula-based dependence modeling over traditional correlation measures. \cite{Xie2016} further developed these ideas, showing improved profitability compared to conventional methods. The framework was extended to multiple dimensions by \cite{lau2016multi}, while \cite{Krauss2017} incorporated sophisticated exit rules based on copula-derived signals. Dynamic extensions were introduced by \cite{zhi2017dynamic}, and applications to high-frequency data were explored by \cite{Chu2018}. Recent developments include the mixed copula approach of \cite{SabinodaSilva2023}, the Copula-GARCH model of \cite{Wang2023}, multivariate extensions by \cite{He2024}, and cryptocurrency applications by \cite{Tadi2025}.
+%==============[	  Didactic resources  ]==============
+Practical guidance and pedagogical discussions on pairs trading can be found in \cite{hudsonthames2024}, which provides a broad compendium of methods, from classical cointegration to machine learning-based selection. On a methodological note, \cite{alexander2008market} offers valuable introductions to both cointegration analysis and copula applications in financial markets, particularly in chapters II.5 and II.6.
 
-Alternative approaches to pairs trading have emerged in recent years. \cite{do2006new} developed a stochastic residual spread model, while \cite{Zeng2014} focused on optimal threshold determination. Machine learning applications have gained prominence, with \cite{Sarmento2020} utilizing LSTM networks, \cite{Han2023} employing unsupervised learning for pair selection, and \cite{Roychoudhury2023} combining clustering with deep reinforcement learning. Novel optimization approaches include the convex-concave framework of \cite{Johansson2024}, the graphical matching approach of \cite{qureshi2024pairs}, and the clustering-based methodology of \cite{Rotondi2025}.
 
-Our synthetic control methodology draws inspiration from the index tracking literature. \cite{Alexander1999} pioneered the application of cointegration to tracking problems, while \cite{Alexander2002} and \cite{Alexander2005a} developed enhanced indexing strategies. \cite{Alexander2005b} explored market regime effects, and recent work by \cite{Shu2020} introduced adaptive elastic net methods for high-dimensional tracking. \cite{Bradrania2021} incorporated machine learning for state-dependent stock selection, demonstrating the evolving sophistication of tracking methodologies.
+%==============[	  Alternative approaches  ]==============
+Beyond cointegration or copula methodologies, several innovative techniques have surfaced. 
+%New approaches to modeling and parameter estimation for pairs trading appear in \cite{do2006new} and \cite{Zeng2014}, with the latter introducing threshold-based mean-reversion strategies. 
+\cite{do2006new} developed a stochastic residual spread model, while \cite{Zeng2014} focused on optimal threshold determination. 
+In more recent research, \cite{Sarmento2020} incorporates machine learning (OPTICS clustering) to constrain search space, while \cite{Johansson2024} leverages convex-concave optimization for multi-asset statistical arbitrage. Reinforcement learning is featured in \cite{Han2023} for automated pair selection, and \cite{qureshi2024pairs} employs a graphical matching approach to reduce overlap among chosen pairs. Further, \cite{Roychoudhury2023} couples clustering with deep RL for equity indices, whereas \cite{Rotondi2025} applies a partial correlation-based distance to cluster promising trading candidates.
+%Alternative approaches to traditional pairs trading have been proposed. \cite{do2006new} developed a stochastic residual spread model, while \cite{Zeng2014} focused on optimal threshold determination. Machine learning applications have gained prominence, with \cite{Sarmento2020} utilizing LSTM networks, \cite{Han2023} employing unsupervised learning for pair selection, and \cite{Roychoudhury2023} combining clustering with deep reinforcement learning. Novel optimization approaches include the convex-concave framework of \cite{Johansson2024}, the graphical matching approach of \cite{qureshi2024pairs}, and the clustering-based methodology of \cite{Rotondi2025}.
+%
 
-%==============[	  o1  ]==============
-
-%\section{Literature Review}
-%
-%\paragraph{Pairs Trading Classics.}
-%Early foundational work on pairs trading can be traced to studies that pioneered the strategy's empirical validation and theoretical underpinnings. In particular, \cite{Gatev2006} proposed a simple yet effective framework in which stocks are paired according to minimized distance between normalized historical prices, thus generating substantial excess returns. Another key reference, \cite{Elliott2005}, introduced a mean-reverting Gaussian Markov chain model for the spread, providing one of the first analytical frameworks that bridges theory and practice in pairs trading.
-%
-%\paragraph{Cointegration-Based Approaches.}
-%A popular way to identify and exploit persistent relationships in pairs trading has involved cointegration analysis. \cite{vidyamurthy2004pairs} stands out as a seminal reference, detailing how cointegration can be applied to detect mean-reverting spreads in equity markets. Subsequent work (e.g., \cite{Caldeira2013}, \cite{Huck2014}, \cite{Cartea2015}, \cite{Lintilhac2016}) consistently investigates how cointegration frameworks can isolate stable long-term relationships, offering systematic procedures for portfolio construction, parameter estimation, and risk management within the pairs trading context.
-%
-%\paragraph{Empirical Investigations of Pairs Trading.}
-%Several studies have examined the profitability and practical nuances of pairs trading in different markets and time periods. For instance, \cite{Chen2019} reported large abnormal returns driven by short-term reversals and pairs momentum effects, while \cite{Do2010} showed that simple pairs trading remains viable in turbulent periods despite a general profitability decline in later years. In a UK-centric study, \cite{Bowen2014} recorded moderate annual returns once risk and liquidity were accounted for. Large-scale assessments in \cite{Krauss2016} and \cite{Rad2016} confirmed that distance, cointegration, and copula-based strategies can yield significant alpha but exhibit important differences regarding convergence speed and trading frequencies.
-%
-%\paragraph{Didactic Sources.}
-%Practical guidance and pedagogical discussions on pairs trading can be found in \cite{hudsonthames2024}, which provides a broad compendium of methods, from classical cointegration to machine learning-based selection. In a related vein, \cite{alexander2008market} offers a detailed overview of cointegration techniques in Chapter~II.5 and introduces fundamental principles of copula modeling for financial applications in Chapter~II.6, thus serving as an essential reference for new entrants to the field.
-%
-%\paragraph{Copula-Based Pairs Trading.}
-%An evidently growing strand of research leverages copulas to model more general dependencies beyond linear correlation. Early foundational methods include \cite{Min2010}, which highlights Bayesian pair-copula constructions, and \cite{stander2013trading}, offering a copula-based approach for detecting relative mispricing but noting potential challenges posed by transaction costs. Extensions in \cite{Liew2013} and \cite{Xie2016} underscore that copulas outperform distance-of-prices rules in capturing tail dependencies. Multi-dimensional variants have been proposed (e.g., \cite{lau2016multi}) to incorporate three or more assets into a single framework. Further refinements, like those introduced in \cite{Krauss2017} and \cite{zhi2017dynamic}, combine t-copulas or dynamic copula-GARCH models with individualized thresholds for improved risk-adjusted returns. In the high-frequency domain, \cite{Chu2018} showed that copula-based mispricing indices can be coupled with deep learning for profitability enhancements. Recent efforts also explore mixed copulas (\cite{SabinodaSilva2023}), ARMA-GARCH approaches (\cite{Wang2023}), and copulas specialized for cointegrated assets (\cite{He2024}), culminating in improved alpha extraction. Finally, \cite{Tadi2025} proposes reference-asset-based copula trading specifically for cryptocurrencies, aligning well with the expanding scope of digital assets.
-%
-%\paragraph{Pairs Trading: Other Approaches.}
-%Beyond cointegration or copula methodologies, several innovative techniques have surfaced. New approaches to modeling and parameter estimation for pairs trading appear in \cite{do2006new} and \cite{Zeng2014}, with the latter introducing threshold-based mean-reversion strategies. In more recent research, \cite{Sarmento2020} incorporates machine learning (OPTICS clustering) to constrain search space, while \cite{Johansson2024} leverages convex-concave optimization for multi-asset statistical arbitrage. Reinforcement learning is featured in \cite{Han2023} for automated pair selection, and \cite{qureshi2024pairs} employs a graphical matching approach to reduce overlap among chosen pairs. Further, \cite{Roychoudhury2023} couples clustering with deep RL for equity indices, whereas \cite{Rotondi2025} applies a partial correlation-based distance to cluster promising trading candidates.
-%
-%\paragraph{Synthetic Controls / Index-Tracking.}
-%The method of replicating a target asset's returns by constructing a portfolio of contributor assets is reminiscent of index-tracking procedures. Classic treatments connecting cointegration analysis and hedging tasks (e.g., \cite{Alexander1999} and \cite{Alexander2002}) lay theoretical groundwork for such an approach. Subsequent refinements in \cite{Alexander2005a} and \cite{Alexander2005b} investigate how cointegration outperforms traditional techniques in crafting robust index trackers and exploiting time-varying market regimes. Complementary research (e.g., \cite{Shu2020}) shows that sparse solutions across a large universe can reduce transaction costs, an idea further corroborated in \cite{Bradrania2021}, where machine learning identifies dynamic selection methods for index constituents. These frameworks illustrate how synthetic control concepts provide a flexible foundation for building market-neutral positions or tracking assets with fewer assumptions.
+%==============[	  Synthetic Controls / Index-Tracking  ]==============
+The method of replicating a target asset's returns by constructing a portfolio of contributor assets is reminiscent of index-tracking procedures. Classic treatments connecting cointegration analysis and hedging tasks (e.g., \cite{Alexander1999} and \cite{Alexander2002}) lay theoretical groundwork for such an approach. Subsequent refinements in \cite{Alexander2005a} and \cite{Alexander2005b} investigate how cointegration outperforms traditional techniques in crafting robust index trackers and exploiting time-varying market regimes. Complementary research (e.g., \cite{Shu2020}) shows that sparse solutions across a large universe can reduce transaction costs, an idea further corroborated in \cite{Bradrania2021}, where machine learning identifies dynamic selection methods for index constituents. These frameworks illustrate how synthetic control concepts provide a flexible foundation for building market-neutral positions or tracking assets with fewer assumptions.
+%Our synthetic control methodology draws inspiration from the index tracking literature. \cite{Alexander1999} pioneered the application of cointegration to tracking problems, while \cite{Alexander2002} and \cite{Alexander2005a} developed enhanced indexing strategies. \cite{Alexander2005b} explored market regime effects, and recent work by \cite{Shu2020} introduced adaptive elastic net methods for high-dimensional tracking. \cite{Bradrania2021} incorporated machine learning for state-dependent stock selection, demonstrating the evolving sophistication of tracking methodologies.
