--- a/Arbitrage-Lab/txt_3_Empirical.tex
+++ b/Arbitrage-Lab/txt_3_Empirical.tex
@@ -1,7 +1,9 @@
 \section{Empirical Application}
+
 %----------------------------------------------------
 \input{txt_3-1_Assumptions.tex}
 %----------------------------------------------------
 
-
-
+%----------------------------------------------------
+\input{txt_3-2_Empirical_Results.tex}
+%----------------------------------------------------
