--- a/Arbitrage-Lab/txt_A_on_synthetic_controls.tex
+++ b/Arbitrage-Lab/txt_A_on_synthetic_controls.tex
@@ -1,4 +1,4 @@
-\section{Cointegration Meets Synthetic Controls: A Formal Equivalence}
+\subsection{Cointegration Meets Synthetic Controls: A Formal Equivalence}
 \label{sec:cointegration_synthetic_controls}
 
 In this appendix section, we develop a formal argument showing how, under some stringent assumptions, our notion of \emph{synthetic control} can be viewed as a special case of \emph{cointegration}. This connection underlies the intuition that, when one normalizes the first variable of a cointegrated system to 1, the remaining cointegration relationships effectively produce the \emph{synthetic} version of the first variable when the cointegration vector satisfies a specific restriction. 
